# pico-estlcam-handrad

./: CMakeLists.txt  buttondebounce.c  buttondebounce.h  estlcam_protocol.txt  main-backup.txt  main.c  readme.md  rotaryencoder.c  rotaryencoder.h
doc/: bom.md
